添加自动路由匹配，添加错误捕捉

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ninggure/utils": "^1.0.3",
     "express": "^4.17.1",
     "mongoose": "^5.12.3"
   },
