--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express-template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/index.ts",
+    "dev": "nodemon ./src/app.ts",
     "watch": "tsc -w",
     "build": "tsc"
   },
