--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@ninggure/utils": "^1.0.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
