--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ninggure/utils": "^1.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
