--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "./src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/app.js",
-    "watch": "tsc -w",
-    "build": "tsc"
+    "dev": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +19,6 @@
     "mongoose": "^5.12.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.44",
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "nodemon": "^2.0.7"
   }
 }
