--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
-    "moment": "^2.29.1",
-    "mongoose": "^5.12.3"
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
